Descriptions; SOI & Mass fixes for Gwargmoons
* Define SOIs for Deibos and Phomos
* Increase Bercue's mass by a factor of about 8 so its density makes sense.
* Add colorful names for Luna Gregoria and SnailsAttack to match those used by Wolf-Rayet and Sabine.
* Rewrite descriptions for Ilio Barycenter, Phosphol, Vespol, Ollo, Olu, Soval, Fourcroy, Conscience, Fish, Arach, Drae, Kilna, Alkin, Ilmar, Ulen, Marith, Radlun, Squangus, Tritonis, Andro, Arterr, Quank, Ogoquo, Raft, and Hadfield.

--- a/GameData/PJ2/KopernicusFiles/0_Suns/0_Barycenter.cfg
+++ b/GameData/PJ2/KopernicusFiles/0_Suns/0_Barycenter.cfg
@@ -29,7 +29,7 @@
         {
 			selectable = True
 			displayName = Ilio System Barycenter
-			description = The center of mass of the Suns, Ilio Phosphol and Ilio Vespol, and effectively the center of the entire planetary system.
+			description = The center of mass of the Suns, Ilio Phosphol and Ilio Vespol, and effectively the center of the entire planetary system. The two suns have a combined mass of 2 Solar masses and shines with the combined intensity of 2 Solar luminosities, though no one seems to remember what exactly a "Sol" is. The Ilio system is thought to be about 4-6 Billion years; astronomers still debate the specific chronology, and was formed through a complex process involving the collapse of what must have been an especially metal-rich molecular cloud.\nThe two stars making up Ilio were not always granted different names--their names, which translate as the Dawn and Dusk Suns, were first used when astronomers began to investigate early theories of planetary motion. \n\n<color=#19bdbd>-Luna Gregoria</color>
 			mass = 3.977e28
 			//2 Msol
 			radius = 80000000
