--- a/GameData/PJ2/KopernicusFiles/0_Suns/A_Phosphol.cfg
+++ b/GameData/PJ2/KopernicusFiles/0_Suns/A_Phosphol.cfg
@@ -25,7 +25,7 @@
 			//Temperature = 5800K
 			
 			
-			description = Ilio Phosphol, the Morning Sun, is the larger, hotter, and more luminous of the two Suns in the daytime sky.\n -Luna
+			description = Ilio Phosphol, the Morning Sun, is the larger, hotter, and more luminous of the two Suns in the daytime sky. By the numbers, it's about 1.1 Solar Masses, and it shines with about 1.5 Solar Luminosities; contributing 75% of Ilio's sunlight. It has a spectral type of G2V. Ilio Phosphol is the greatest producer of ultraviolet radiation in the system, except during Pyrian superflares. Astronomers have broken Phosphol's light into a spectrum to inspect its constituent colors, and many of them hope to see this elusive "purpler-than-purple" coloration, but no one has had any luck yet.\n <color=#19bdbd>-Luna Gregoria</color>
 		}
 		ScaledVersion
         {
