--- a/GameData/PJ2/KopernicusFiles/0_Suns/B_Vespol.cfg
+++ b/GameData/PJ2/KopernicusFiles/0_Suns/B_Vespol.cfg
@@ -27,7 +27,7 @@
 			//color = 1,0.978,0.932,1
 			//LumaCorrectedColor = 1.017, 0.997, 0.957
 			
-			description = Ilio Vespol, the Dusk Sun, is the dimmer, less massive, and faster moving of the two Suns in the daytime sky.\n -Luna
+			description = Ilio Vespol, the Dusk Sun, is the dimmer, less massive, and faster moving of the two Suns in the daytime sky. It has a mass of about 0.9 Solar Masses and a luminosity of about 0.5 Solar Luminosities, contributing about 25% of Ilio sunlight. Its spectral type is K1V. Ilio Vespol is somewhat harder to study than Ilio Phosphol, since its lower surface temperature leads to a less intense image on films, sensors, and visual inspection; but reducing the filters results in too bright an image if Ilio Phosphol is also in the field of view. \n <color=#19bdbd>-Luna Gregoria</color>
 		}
 		ScaledVersion
         {
