--- a/GameData/PJ2/KopernicusFiles/0_Suns/C_Pyri.cfg
+++ b/GameData/PJ2/KopernicusFiles/0_Suns/C_Pyri.cfg
@@ -21,8 +21,7 @@
 			//color = 1.0000,0.6275,0.2784,1
 			//LumaCorrectedColor = 1.172,0.955,0.757,1
 			
-			description = Pyri wasn't discovered until recently, despite being the star around which our home orbits. It had briefly been identified as the long since hypothesized Central Fire, suspected to be the center of the entire universe. A Counterweight planet must surely exist on the other side, or the cosmos would be lopsided. Therefore, in order to evaluate whether Pyri really is the Central Fire, a voyage into space to peer behind the Central Fire and detect this counterplanet would be necessary.\n\n A complete model of gravity has since made the ancient cosmology obsolete, but there are still some astronomers who want a look behind Pyri "just to see." \n -Luna
-			//description = Pyri is a red dwarf star.
+			description = Pyri wasn't discovered until recently, despite being the star around which our home orbits. It is an ultracool red dwarf star with a spectral type of M8V. It had briefly been identified as the long since hypothesized Central Fire, suspected to be the center of the entire universe. A Counterweight planet must surely exist on the other side, or the cosmos would be lopsided. Therefore, in order to evaluate whether Pyri really is the Central Fire, a voyage into space to peer behind the Central Fire and detect this counterplanet would be necessary.\n\n A complete model of gravity has since made the ancient cosmology obsolete, but there are still some astronomers who want a look behind Pyri "just to see." \n <color=#19bdbd>-Luna Gregoria</color>
 		}
 		Orbit
 		{
