--- a/GameData/PJ2/KopernicusFiles/1_InnerSystem/Gwargin/3_Deibos.cfg
+++ b/GameData/PJ2/KopernicusFiles/1_InnerSystem/Gwargin/3_Deibos.cfg
@@ -19,6 +19,7 @@
 			tidallyLocked = true
 			radius = 5400
 			inverseRotThresholdAltitude = 4500
+			sphereOfInfluence = 10000
 			initialRotation = 220
 			
 			geeASL = 0.00450
