--- a/GameData/PJ2/KopernicusFiles/1_InnerSystem/Gwargin/4_Phomos.cfg
+++ b/GameData/PJ2/KopernicusFiles/1_InnerSystem/Gwargin/4_Phomos.cfg
@@ -19,7 +19,8 @@
 			tidallyLocked = true
 			radius = 3000
 			maxZoom = 10000
-			inverseRotThresholdAltitude = 4500
+			inverseRotThresholdAltitude = 5500
+			sphereOfInfluence = 9000
 			initialRotation = 60
 			
 			geeASL = 0.00357
