--- a/GameData/PJ2/KopernicusFiles/1_InnerSystem/Gwargin/5_Bercue.cfg
+++ b/GameData/PJ2/KopernicusFiles/1_InnerSystem/Gwargin/5_Bercue.cfg
@@ -19,10 +19,10 @@
 			tidallyLocked = true
 			radius = 52000
 			initialRotation = 20
-			
-
-			// 1/100 earth mass in kilograms
-			mass = 2.59076e18
+		
+			//mass = 2.59076e18 this is correct--intended to be like Titan:Saturn; around Vesta mass; but the radius was too large.
+			//it's easier to increase the mass than to change the radius for all pqsmods so i'm just gonna do that. it's still a somewhat small moon, though.
+			mass = 2.1197e19 //density = roughly 3.5 g/cm^3 in real scale
 			ScienceValues
  		        {
 				//uh
