--- a/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_b/0-Ollo.cfg
+++ b/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_b/0-Ollo.cfg
@@ -17,7 +17,7 @@
             //Ollo has a slightly denser composition than Jupiter and a mass of 17 kEarths.
 
             displayName = Ollo^N
-            description = Ollo is a gas dwarf with nearly featureless white clouds. It's the closest planet to Phosfol and Vespol, and is so bright that its moons were only recently discovered by telescope.\n\n -SnailsAttack
+            description = Ollo is a gas dwarf with nearly featureless white clouds. Due to its proximity to Ilio, Ollo's brightness is unparalleled among Ilian planets--despite its relative diminutive size for a planet, it outshines larger but grayer Kilna. It is so bright, in fact, that it outshines all of its satellites, which were only recently discovered telescopically. Ollo has a bad reputation in astronomy circles for being "just a boring cueball," but planetary scientists salivate at the chance to study six scorched worlds up close.\n\n <color=#cfcc17>-SnailsAttack</color>
             radius = 1980000
             mass = 1.015E23
             rotates = true
