--- a/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_b/1-Olu.cfg
+++ b/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_b/1-Olu.cfg
@@ -16,7 +16,7 @@
             // Olu is a prolate ellipsoid with an aspect ratio of 1.3:1. Volume is 1.2E16 m^3. It's probably made of silicate rock and metal with an average density of 3400 kg/m^3. The mass therefore is 4.08E19 kg.
 
             displayName = Olu^N
-            description = <color=#77b2ff>[Oh-loo]</color> The innermost moon of Ollo. Telescope observations show that the moon is highly prolate, and likely under immense tidal stresses.\n\n -CloverDove
+            description = <color=#77b2ff>[Oh-loo]</color> The innermost moon of Ollo. Due to light curve observations, it is known to be highly prolate, and likely under immense tidal stresses. Its spectrum is, curiously, slightly greenish--a rare color to find on a planet.\n\n -CloverDove
             radius = 130000 
             mass = 4.08E19
             tidallyLocked = true
