--- a/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_b/3-Fourcroy.cfg
+++ b/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_b/3-Fourcroy.cfg
@@ -16,7 +16,7 @@
             //Fourcroy is roughly triaxial. Volume is about 4.5E13 m^3. It's made of loosely packed silicate rock with a density in the range of 1200 kg/m^3.
         
             displayName = Fourcroy^N
-            description = Fourcroy is a large shepherd moon on the outer edge of Ollo's ring system.\n\n -SnailsAttack
+            description = Fourcroy is a minor satellite known to orbit at the edge of Ollo's faint ring system. Its placement suggests that its gravity is crucial for keeping the structure of the rings in check, making it a shepard satellite. It's pretty big for a shepard satellite, though.\n\n <color=#cfcc17>-SnailsAttack</color>
             radius = 18000 
             mass = 5.4E16
             tidallyLocked = true
