--- a/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_b/4-Conscience.cfg
+++ b/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_b/4-Conscience.cfg
@@ -16,7 +16,7 @@
             //Conscience is a roughly spherical rocky body with a volume of 3.05E15 m^3. Density is probably about 2700 kg/m^3, equivalent to densely-packed silicate rock. Therefore the mass is 8.24E18 kg
 
             displayName = Conscience^N
-            description = A roughly spherical moon of Ollo.\n\n -SnailsAttack
+            description = Ollo is a small and likely round moon of Ollo. It probably isn't self aware, despite the name; though it needn't be to be worth a visit. It and Olu are the only known rocky moons large enough to be rounded where both internal AND external heating are major factors, and understanding how that manifests could be important in understand all kinds of cool scientific phenomena. Maybe! We don't know enough about what we don't know to know whether or not knowing about this would let us know about other stuff. Better check it out just in case, though.\n\n <color=#cfcc17>-SnailsAttack</color>
             radius = 90000 
             mass = 8.24E18 
             tidallyLocked = true
