--- a/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_c/Arach.cfg
+++ b/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_c/Arach.cfg
@@ -12,7 +12,7 @@
 		}
 		Properties
 		{
-			description = The outer moon of Kilna, oddly rounded for its size. \n -Mh
+			description = A middle moon of Kilna, trapped in an orbital resonance with Solin. Not much is known about Arach, other than its somewhat uniform light curve and brownish spectrum. Arach's claim to fame was as the main setting in season 2 episode 15 of Captain Positron, where Lt. Cmdr Roe Baught is trapped in a laboratory run by scary spider machines built by the evil Dr. N.A. Kill. In the episode, Roe Baught must avoid being disassembled long enough to be rescued by the cunning Captain Positron and--but I shan't spoil the episode's ending! \n -Mh
 			displayName = Arach^N
 			radius = 9799
 			geeASL = 0.008
