--- a/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_c/Kilna.cfg
+++ b/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_c/Kilna.cfg
@@ -11,7 +11,7 @@
 		Properties
 		{
 			displayName = Kilna^N
-			description = Kilna is a warm gas giant planet and the second around Ilio AB. Its high albedo is presumably due to being completely shrouded by water clouds \n -Orios and Mh
+			description = Kilna is a warm gas giant planet, and a sort of a twin of Alkin. Kilna is the brighter of the two, though it's not substantially more reflective. Its high reflectivity is a result of water vapor clouds in its atmosphere. Kilna was the first world orbiting Ilio to have its spectrum analyzed, and was used to confirm the existence of hydrogen and helium in worlds outside of the Pyri system. Kilna has an expansive kingdom of seven moons, and even at such a great distance, cloud bands of alternating white and gray tone are easily seen in its atmosphere. \n -Orios and Mh
 			rotationPeriod = 9369
 			radius = 6502415
 			// 1/100 earth mass in kilograms
