--- a/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_d/Alkin.cfg
+++ b/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_d/Alkin.cfg
@@ -12,7 +12,7 @@
 		Properties
 		{
 			displayName = Alkin^N
-			description = Alkin is a very turbulent gas giant in habitable zone around Ilio, its temperature just right to have water clouds. We suspect its moons might be capable of supporting life! \n -Orios
+			description = Alkin is one of the largest planets in the system, and is sort of a twin to Kilna, being only marginally more massive. It has several substantial moons and one enormous companion orbiting at a substantial distance. Alkin is notable for its remarkable colors--seen even in modest binoculars, Alkin and Ulen are a beautiful green-red double planet; their contrasting colors bringing out the best in each other. When observed at high power, Alkin is a white planet with greenish cloud bands. Astronomers debate the cause of this unique coloration; answers range from the deadly to the habitable--from chlorine to chlorophyll.\n\nAlkin orbits Ilio in the most optimum part of the habitable zone--that special life-sustaining distance where we expect to find liquid water on planetary surfaces. Alkin is something of a symbol of hope, that one day we may again explore strange new worlds, and seek out new life. \n\n -Orios
 			radius = 6827300
 			mass = 5.97219e22
 			@mass *= 288
