--- a/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_d/Ilmar.cfg
+++ b/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_d/Ilmar.cfg
@@ -15,7 +15,7 @@
 		{
 			displayName = Ilmar^N
 			//this is the hab moon moon -techo <3
-			description = Seemingly a perfect fit for a habitable world, it could very well be a planet on its own if not bound by the inmense gravitational pull of both Ulen and Alkin. Biosignatures have been detected in its atmosphere and surface. \n -Techo & Mh
+			description = Ilmar is the most massive known moonmoon, unless for some reason you count either Pyri or Ulen as a planet. It isn't nearly as massive as Ulen, but it's nothing to scoff at either--it's a proper planet-mass world nearly as large as Dopale. Ilmar is one of the most tantalizing targets of study--as it is the only world outside of Armstrong known with near certainty to harbour life. Ilmar's thick atmosphere is known to contain a large fraction of oxygen and minuscule traces of methane, and if that wasn't enough, through a large enough telescope, Ilmar shows tantalizing hints of green and brown landmasses covered in vegetation, interrupted by deep blue seas. \n -Techo & Mh
 			radius = 478000
 			geeASL = 0.71
 			biomeMap = PJ2/KopernicusFiles/1_InnerSystem/IlioAB_d/Ilmar_biomes.png
