--- a/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_d/Marith.cfg
+++ b/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_d/Marith.cfg
@@ -13,7 +13,7 @@
 		Properties
 		{
 			displayName = Marith^N
-			description = A relatively small moon, it is the closest to Alkin and likely experiences strong tides which stretch its interior causing intense tectonic activity, melting and reshaping its surface in the past. \n -Techo
+			description = A relatively small moon, Marith is the second closest to Alkin and likely experiences strong tidal forces which squeeze and stretch its interior. This would cause intense tectonic activity, melting and reshaping its surface at different times in its history. \n -Techo
 			//this is the moon -techo <3
 			geeASL = 0.135
 			radius = 187000
