--- a/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_d/Squangus.cfg
+++ b/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_d/Squangus.cfg
@@ -14,7 +14,7 @@
 		{
 			displayName = Squangus^N
 			//this is the metal -techo <3
-			description = The innermost moon of Alkin. Seen as the brightest of Alkins inner moons, it has one of the highest albedos of any object in the system, though it was not discovered until the re-invention of larger scale telescopes due to its proximity to its host. \n -Techo
+			description = The innermost moon of Alkin, Squangus is seen as the brightest of Alkin's regular satellites; boasting one of the highest albedos of any object in the system, though it was not discovered until the re-invention of larger scale telescopes due to its proximity to its host. The high albedo is something of a mystery--surely Squangus isn't an ice-ball? Squangus orbits so close to its parent planet that it must be made out of a substantial fraction of iron-nickel to remain intact; so it likely has a huge iron core with a relatively small rocky mantle--though some models suggest it could be pure iron-nickel! \n -Techo
 			radius = 148000
 			geeASL = 0.2285
 			tidallyLocked = True
