--- a/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_d/Ulen.cfg
+++ b/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_d/Ulen.cfg
@@ -14,7 +14,7 @@
 		{
 			displayName = Ulen^N
 			//this is the super*earth -techo <3 (*mega -mh)
-			description = A gigantic rocky world, it is more apt to call it a binary companion instead of a moon. We are not sure how it didn’t acquire an envelope, or how it ended up around Alkin, but it means that it’s surface conditions could support liquid water and even life! \n -Mh and Techo
+			description = A gigantic rocky world massing just over a tenth the mass of Alkin, it is more apt to call Ulen a binary companion instead of a moon. Many mysteries remain regarding worlds like Ulen. Despite its mass--comparable to the cores of the gas giants--Ulen never accreted a hydrogen envelope and became a gas giant. But why not? And how did it manage to find itself around Alkin? Was it captured or did it form in-situ? Some astronomers choose not to look a gift equus in the mouth--despite the spooky coloration, Ulen is thought to have habitable conditions at the surface, and if Rodlong has taught us anything, it's that 4.36G is nothing to a Kerbal with determination. \n -Mh and Techo
 			radius = 1660000 //not the placeholder radius anymore
 			geeASL = 4.36
 			tidallyLocked = False
