--- a/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_e/IlioAB_e_1_i_Somna.cfg
+++ b/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_e/IlioAB_e_1_i_Somna.cfg
@@ -16,7 +16,7 @@
 		Properties
 		{
 			displayName = Somna^N
-			description = Somna is the odd little moon of Gerro. It almost looks like a half moon, showing only one face to either side. Some have compared it to a black-and-white cookie or a scoop of twist ice cream. Tantalizing enough to be mildly mouthwatering, but how much exactly still remains to be seen.\n\n-Interplanet Janet & Luna
+			description = Somna is the odd little moon of Gerro. It almost looks like a half moon, showing only one face to either side. Some have compared it to a black-and-white cookie or a scoop of twist ice cream. Tantalizing enough to be mildly mouthwatering, but how much exactly still remains to be seen.\n\n-Interplanet Janet & <color=#19bdbd>Luna</color>
 			
 			//do not leave this as the placeholder radius
 			radius = 128000
