--- a/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_0_Greek/IlioC_Greek.cfg
+++ b/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_0_Greek/IlioC_Greek.cfg
@@ -14,7 +14,7 @@
 		Properties
 		{
 			displayName = Tritonis
-			description = A ice giant.
+			description = If you were to look 60 degrees of arc away from Pyri you might find Lu, or Garner--Armstrong's trojans. If you were to look 60 degrees of arc away from Ilio, you would see Pyri's own trojans. Millie is essentially too dim to see visually, but the leading trojan, Tritonis, is quite bright. Tritonis is a middle-ground planet in a lot of ways. Its mass is a middle-ground between Gas Giants like Alkin, and "Mini-Giants" like Zhandar. When visually inspected through a telescope, it can be seen as a bright blue planet with white and brown equatorial belts--a middle ground between a typical ice giant like Glice or Descry, and a typical cool gas giant like Bifrost or Oynag. Its orbit, straddling the gravitational equipotential saddle of Ilio-Pyri L5, is a middle ground between the warm inner Ilio system and the frigid outer Ilio system. It is therefore a unique environment worthy of study. So little is known about it--did it form in the inner system and get thrown outward? Did it form with Pyri and escape into space? Was it captured into its current orbit from farther out? Or did it form just exactly where it is?\n-Techo
 			//do not leave this as the placeholder radius
 			radius = 5559467.3
 			geeASL = 0.9		
