--- a/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_0_Greek/IlioC_Greek_A.cfg
+++ b/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_0_Greek/IlioC_Greek_A.cfg
@@ -15,7 +15,7 @@
 		Properties
 		{
 			displayName = Andro
-			description = A rather close in ball of rock.
+			description = Andro is the innermost moon of Tritonis, and as tiny as it is, it's not expected to be boring. As it rotates, it shows an odd shape in its light curve, and its spectrum changes noticeably as it rotates, implying its surface covering is highly non-homogenous.\n-Techo & Mh
 			//do not leave this as the placeholder radius
 			radius = 9827  
 			tidallyLocked = true
