--- a/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_0_Greek/IlioC_Greek_B.cfg
+++ b/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_0_Greek/IlioC_Greek_B.cfg
@@ -15,7 +15,7 @@
 		Properties
 		{
 			displayName = Arterr
-			description = A distant bright white dot.
+			description = Arterr is Tritonis' largest satellite, and by far its brightest. Arterr is extremely reflective, reflecting more than 70% of the light that hits it, and is thought to be an enormous rocky planet covered entirely in snow-white ice. That high an albedo implies some kind of ongoing resurfacing mechanism, so it is possible the planet is cryovolcanic in nature--a hypothesis supported by Arterr's substantial atmosphere. \n-The Orios & Techo
 			//do not leave this as the placeholder radius
 			radius = 772598.6 
 			tidallyLocked = true
