--- a/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_0_Greek/IlioC_Greek_C.cfg
+++ b/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_0_Greek/IlioC_Greek_C.cfg
@@ -15,7 +15,7 @@
 		Properties
 		{
 			displayName = Trithus
-			description = The astronomer who discovered this body was found DEAD after announcing its discovery, be careful here.\n-Techo
+			description = The astronomer who discovered this body was found DEAD after announcing its discovery. Be careful here.\n-Techo
 			//do not leave this as the placeholder radius
 			radius = 593600
 			
