--- a/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_ba_ASTEROID_BELT/10_Asteroid_Quank.cfg
+++ b/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_ba_ASTEROID_BELT/10_Asteroid_Quank.cfg
@@ -14,7 +14,7 @@
 		Properties
 		{
 			displayName = Quank^N
-			description = A small brown asteroid which crosses the orbit of Pyri c.\n\n -SnailsAttack
+			description = A small brown asteroid which crosses the orbit of Haut-Oklo, Quank is different than most asteroids, belonging apparently to no impact family and with no other relatives. That lends credence to the possibility that it is a protoplanet, rather than a disturbed rubble pile. It would, however, be quite small for a protoplanet. The scientific profit that could be gained from visiting a protoplanet that formed from the same material as Haut-Oklo is significant, as it would allow for a sample return without the great complexity in staging a landing and launching from the planet itself. Rule 3: Never spend more for an acquisition than you have to.\n Though any relationship between Haut-Oklo and Quank is merely speculative. Rule 19: Satisfaction is not guaranteed; and besides, Rule 62: The riskier the road, the greater the profit. \n\n <color=#cfcc17>-SnailsAttack</color>
 			
 			//the radius given in the template is the average radius. If you use a shapemap, consider reducing the ksp "sea level" radius to keep the average radius the same.
 			radius = 14230
