--- a/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_ba_ASTEROID_BELT/11_Asteroid_Ogoquo.cfg
+++ b/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_ba_ASTEROID_BELT/11_Asteroid_Ogoquo.cfg
@@ -13,7 +13,7 @@
 		Properties
 		{
 			displayName = Ogoquo^N
-			description = A rubble-pile asteroid orbiting past Pyri c.\n\n -SnailsAttack
+			description = Ogoquo was discovered by a lens relay system pointing into the Greater Goo Mass, that enormous volume of sentient slime that we owe so much to. Ogoquo is the most distant member of the Arriprit Belt, and can be thought of as the final rung on the interplanetary ladder--launching from a refueling station on Ogoquo, a spacecraft would be far out of Pyri's deep, deep gravity well. It is guaranteed fantastic views of Zhandar, Haut-Oklo, and Beddul-Dopale! But enough fantastical speculation!\n\n <color=#cfcc17>-SnailsAttack</color>
 			
 			radius = 16500
 			
