--- a/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_ba_ASTEROID_BELT/8_Asteroid_Raft.cfg
+++ b/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_ba_ASTEROID_BELT/8_Asteroid_Raft.cfg
@@ -14,7 +14,7 @@
 		Properties
 		{
 			displayName = Raft^N
-			description = A small member of Schmez family of asteroids.\n\n -SnailsAttack
+			description = Raft is one of the smallest members of the Arriprit Belt, and has a very similar orbit to Schmev, Rider, and Gershmurzelen. Raft fits in in all but one respect--it has a significantly higher albedo than the other minor planets which share its orbit.\n\n <color=#cfcc17>-SnailsAttack</color>
 			
 			radius = 3100
 			
