--- a/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_ba_ASTEROID_BELT/9_Asteroid_Rider.cfg
+++ b/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_ba_ASTEROID_BELT/9_Asteroid_Rider.cfg
@@ -14,7 +14,7 @@
 		Properties
 		{
 			displayName = Rider^N
-			description = Rider is one of the members of a collisional family belonging to Schmev--as evidenced by its similar orbit and spectral type, however Rider is considerably redder than Schmev, which gives it its name, redder. Or something. Huh. Rider is well positioned as a potential halfway point between escaping Armstrong and flying by Zhandar, meaning that it takes a similar amount of delta-v to capture into orbit around it at its apoapsis as it does to escape it on a trajectory to Zhandar at its periapsis. Rider is thus an excellent candidate for a refueling station, where a space craft can ride up and down the gravity well OHHHH! THAT'S what its name comes from. Right!\n -Luna
+			description = Rider is one of the members of a collisional family belonging to Schmev--as evidenced by its similar orbit and spectral type, however Rider is considerably redder than Schmev, which gives it its name, redder. Or something. Huh. Rider is well positioned as a potential halfway point between escaping Armstrong and flying by Zhandar, meaning that it takes a similar amount of delta-v to capture into orbit around it at its apoapsis as it does to escape it on a trajectory to Zhandar at its periapsis. Rider is thus an excellent candidate for a refueling station, where a space craft can ride up and down the gravity well OHHHH! THAT'S what its name comes from. Right!\n <color=#19bdbd>-Luna Gregoria</color>
 			
 			//the radius given in the template is the average radius. If you use a shapemap, consider reducing the ksp "sea level" radius to keep the average radius the same.
 			radius = 9117
