--- a/GameData/PJ2/KopernicusFiles/3_OuterSystem/IlioABC_c/0a-Hadfield.cfg
+++ b/GameData/PJ2/KopernicusFiles/3_OuterSystem/IlioABC_c/0a-Hadfield.cfg
@@ -12,7 +12,7 @@
         Properties
         {
             displayName = Hadfield^N
-            description = A red-colored trojan of the Tobalk-Turtlestar system.\n\n -SnailsAttack
+            description = Hadfield is a leading trojan of the Tobalk-Turtlestar system. It is strongly reddish in color, despite popular conception. A popular astronomy book for children, "The Iceballs At the Edge of the Universe," illustrated it as a blue-purple color, while also describing it as a "Planetary Underdog," due to its diminutive size. Now, wouldn't you know it, but if you personify a little dwarf planet and make people root for it, they tend to attach a certain emotional significance to it, even when they're older. Try convincing a room of grown up Kerbals that Hadfield is red instead of blue. I dare you. Good luck. And don't even THINK about breaching the topic of whether or not it's a planet--I've seen people decked for less.\n\n <color=#cfcc17>-SnailsAttack</color>
             radius = 90000 
             mass = 8.24E18 
             tidallyLocked = false
