--- a/GameData/PJ2/KopernicusFiles/3_OuterSystem/IlioABC_c/3-Hidalgo.cfg
+++ b/GameData/PJ2/KopernicusFiles/3_OuterSystem/IlioABC_c/3-Hidalgo.cfg
@@ -13,7 +13,7 @@
         Properties
         {
             displayName = Hidalgo^N
-            description = Hidalgo is a firey red-orange moon, and its name evokes imagery of fire and fury, ironically it is found in the cool outer reaches of the Ilio System. The origin of this beautiful and striking coloration is unknown, some have joked that perhaps while Tobalk is a large ice world, Hidalgo may conversely be a rather diminutive gaseous world. An amusing hypothesis.\n\n -SnailsAttack
+            description = Hidalgo is a firey red-orange moon, and its name evokes imagery of fire and fury, ironically it is found in the cool outer reaches of the Ilio System. The origin of this beautiful and striking coloration is unknown, some have joked that perhaps while Tobalk is a large ice world, Hidalgo may conversely be a rather diminutive gaseous world. An amusing hypothesis.\n\n <color=#cfcc17>-SnailsAttack</color>
             radius = 296000
             geeASL = 0.2
             rotationPeriod = 55000
