--- a/GameData/PJ2/KopernicusFiles/3_OuterSystem/IlioABC_c/4-Pi.cfg
+++ b/GameData/PJ2/KopernicusFiles/3_OuterSystem/IlioABC_c/4-Pi.cfg
@@ -12,7 +12,7 @@
         Properties
         {
             displayName = Pi^N
-            description = Pi is the small, gray, outermost known moon of the Tobalk System. Pi is… small, gray… and it’s the outermost one. Unfortunately, beyond its notably inclined orbit, not much is known that makes Pi stand out. While not the highest priority target, a closer look by a spacecraft may yet reveal what makes Pi special.\n\n -SnailsAttack
+            description = Pi is the small, gray, outermost known moon of the Tobalk System. Pi is… small, gray… and it’s the outermost one. Unfortunately, beyond its notably inclined orbit, not much is known that makes Pi stand out. While not the highest priority target, a closer look by a spacecraft may yet reveal what makes Pi special.\n\n <color=#cfcc17>-SnailsAttack</color>
             radius = 70000 
             mass = 8.1E18 
             tidallyLocked = true
