--- a/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_b/2-Soval.cfg
+++ b/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_b/2-Soval.cfg
@@ -17,7 +17,7 @@
             // Soval is a little unrealistic. It probably ought to be somewhat oblate, and I don't believe it's dense enough to resist being roche'd by Ollo.
 
             displayName = Soval^N
-            description = <color=#77b2ff>[So-vul]</color> It's shaped like a soval. I mean oval.\n\n -SnailsAttack
+            description = <color=#77b2ff>[So-vul.]</color> Precise observations of Ollo as it passes in front of Ilio Phosphol have lead to the discovery of a ring system around Ollo. Further study of these rings by observing stellar occultations at greatest elongation resulted in a special surprise: the discovery of a satellite mixed in with Ollo's rings, at a similar distance to Olu. If it indeed exists, it would likely be composed primarily of "ring fluff," and its low density would result in a greatly elongated shape. Further studies are required to confirm its existence by examining its gravitational impact on the rings, or simply by searching for it directly with a larger telescope with an adequate shade. Or, you know, you could visit Ollo with a spacecraft.\n\n <color=#cfcc17>-SnailsAttack</color>
             radius = 4000
             mass = 8.16E14
             tidallyLocked = true
