--- a/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_b/5-Fish.cfg
+++ b/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_b/5-Fish.cfg
@@ -16,7 +16,7 @@
             //Fish is a small asteroid in an elliptical orbit of Ollo. Volume is about 1.5E12 m^3. It's comprised of loosely-packed silicate rock with a density in the range of 1400 kg/m^3. The mass, therefore is 2.1E15 kg.
 
             displayName = Fish^N
-            description = Fish is a small asteroid in an inclined orbit of Ollo.\n\n -SnailsAttack
+            description = Fish is a small asteroid in an inclined orbit of Ollo. It can not be resolved in any more detail than a tiny dot in the best telescopes, but light curve data is enough to tell us that it's one heck of an interesting shape. What remains to be seen is exactly what shape it is. Fish was named by Areel Euryman, an astronomer who was trying (unsuccessfully) to develop a photograph of Ollo's rings. The rings didn't show up in Ollo's glare, but there was an arc-shaped 'scratch' on the film which brightened and dimmed with a relatively short period. Areel recognized that it was a minor moon, and felt that it almost seemed to swim across the film as it brightened and dimmed. She recorded a "Like a Fish" in her notes, and the name stuck. \n\n <color=#cfcc17>-SnailsAttack</color>
             radius = 7000 
             mass = 3.1E15
             tidallyLocked = false
