--- a/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_c/Drae.cfg
+++ b/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_c/Drae.cfg
@@ -13,7 +13,7 @@
 		Properties
 		{
 			displayName = Drae^N
-			description = A small planet with a thin atmosphere, barely coolenough to have liquid water on its surface. If it indeed has oceans they are likely small and shallow, perhaps slowly boiling away \n -Mh
+			description = A small planet with a somewhat thin, water-vapor rich atmosphere. If Drae ever had oceans, they would surely have boiled away by now. Drae is thought to be, by now, totally dry--making it an interesting parallel to Armstrong's Pyri-facing hemisphere, though not quite as scorched. \n -Mh
 			radius = 380500
 			geeASL = 0.48
 			biomeMap = PJ2/KopernicusFiles/1_InnerSystem/IlioAB_c/Drae_biomes.png
