Gerro-Sandevistan Binary
* Adjust mass ratio of Gerro-Sandevistan, apply a correct orbital period, reduce orbital eccentricity, and change SOIs so they do not overlap the barycenter.

--- a/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_c/Drae.cfg
+++ b/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_c/Drae.cfg
@@ -13,7 +13,7 @@
 		Properties
 		{
 			displayName = Drae^N
-			description = A small planet with a somewhat thin, water-vapor rich atmosphere. If Drae ever had oceans, they would surely have boiled away by now. Drae is thought to be, by now, totally dry--making it an interesting parallel to Armstrong's Pyri-facing hemisphere, though not quite as scorched. \n -Mh
+			description = A small planet with a somewhat thin atmosphere. If Drae ever had oceans, they would surely have boiled away by now. Drae is thought to be, by now, totally dry--making it an interesting parallel to Armstrong's Pyri-facing hemisphere, though not quite as scorched. \n -Mh
 			radius = 380500
 			geeASL = 0.48
 			biomeMap = PJ2/KopernicusFiles/1_InnerSystem/IlioAB_c/Drae_biomes.png
