--- a/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_e/IlioAB_e.cfg
+++ b/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_e/IlioAB_e.cfg
@@ -46,13 +46,19 @@
 			description = The center of mass between Gerro and Sandevistan.\n -Interplanet Janet & Marshall (Myth)
 			radius = 100000
 			mass = 5.97219e22
-			@mass *= 31.89
+			@mass *= 34
 			rotates = true
 			tidallyLocked = false
 			rotationPeriod = 21600
 			initialRotation = 45
 			isHomeWorld = false
 			timewarpAltitudeLimits = 0 0 0 0 0 0 0 0
+			rotationPeriod = 2215129.5488043064
+			//Semimajoraxis = 256342499
+			//Mp = 17.5 Mearth
+			//Ms = 16.5 Mearth
+			//SMAp = 124401507
+			//SMAs = 131940992
 			ScienceValues
 			{
 				landedDataValue = 2.2
