--- a/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_e/IlioAB_e_1_Gerro.cfg
+++ b/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_e/IlioAB_e_1_Gerro.cfg
@@ -16,13 +16,13 @@
 		{
 			displayName = Gerro^N
 			description = Gerro is a gas giant in binary orbit with Sandevistan, but the first of them to be discovered due to its being slightly larger and brighter.\n\nWater vapor detected in the atmosphere renders it a light blue color, though how much there is expected to be, let alone possibility of life, remains to be seen.\n-Interplanet Janet
-			sphereOfInfluence = 134802877
+			sphereOfInfluence = 120000000
 			//do not leave this as the placeholder radius
 			radius = 1856000
 			
 			// 1/100 earth mass in kilograms
 			mass = 5.97219e22
-			@mass *= 14.77
+			@mass *= 17.5
 			rotationPeriod = 18492
 
 			ScienceValues
@@ -111,14 +111,14 @@
 			//THIS IS THE ONLY FIELD IN THE ORBIT NODE YOU SHOULD CHANGE:
 			color = 0.6,0.8,1,1
 
-			semiMajorAxis = 121539622
+			semiMajorAxis = 124401507
 			
-			eccentricity = 0.0934
+			eccentricity = 0
 			longitudeOfAscendingNode = 49
 			argumentOfPeriapsis = 286
 			meanAnomalyAtEpochD = 19
 			inclination = 1.85
-			period = 872245.705958212
+			period = 2215129.5488043064
 		}
 		ScaledVersion
 		{
