--- a/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_e/IlioAB_e_2_Sandevistan.cfg
+++ b/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_e/IlioAB_e_2_Sandevistan.cfg
@@ -18,10 +18,10 @@
 			displayName = Sandevistan^N
 			description = Locked in a tango with Gerro, Sandevistan is possibly one of the worst places this side of Pyri, betraying its partner and habitable-zone-skimmer orbit. What with the lava, tectonic rifting, volcanoes, resurfacing event on the horizon and high gravity, the sights to see are tough to get to, but quite the sights indeed.\n -Marshall (Myth)
 			radius = 1232500
-			sphereOfInfluence = 121539622
+			sphereOfInfluence = 130000000
 			// 1/100 earth mass in kilograms
 			mass = 5.97219e22
-			@mass *= 15.12
+			@mass *= 16.5
 			rotationPeriod = 48640
 
 			ScienceValues
@@ -44,14 +44,14 @@
 			color = 0.825,0.688,0.563,1
 			
 			
-			semiMajorAxis = 134802877
+			semiMajorAxis = 131940992
 			
-			eccentricity = 0.0934
+			eccentricity = 0
 			longitudeOfAscendingNode = 49
 			argumentOfPeriapsis = 106
 			meanAnomalyAtEpochD = 19
 			inclination = 1.85
-			period = 872245.705958212
+			period = 2215129.5488043064
 		}
 		ScaledVersion
 		{
