--- a/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_e/IlioAB_e_1_i_Somna.cfg
+++ b/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_e/IlioAB_e_1_i_Somna.cfg
@@ -20,10 +20,8 @@
 			
 			//do not leave this as the placeholder radius
 			radius = 128000
-			
-			// 1/100 earth mass in kilograms
-			mass = 5.97219e22
-			@mass *= 0.015
+			//density = 3.1 g/cm^3
+			geeASL = 0.113
 			tidallyLocked = true
 			initialRotation = 250
 			ScienceValues
