--- a/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_e/IlioAB_e.cfg
+++ b/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_e/IlioAB_e.cfg
@@ -44,7 +44,7 @@
 		{
 			displayName = Gerro-Sandevistan Barycenter
 			description = The center of mass between Gerro and Sandevistan.\n -Interplanet Janet & Marshall (Myth)
-			radius = 100000
+			radius = 1000000
 			mass = 5.97219e22
 			@mass *= 34
 			rotates = true
@@ -52,7 +52,7 @@
 			rotationPeriod = 21600
 			initialRotation = 45
 			isHomeWorld = false
-			timewarpAltitudeLimits = 0 0 0 0 0 0 0 0
+			timewarpAltitudeLimits = 0 0 0 0 0 0 0 1000
 			rotationPeriod = 2215129.5488043064
 			//Semimajoraxis = 256342499
 			//Mp = 17.5 Mearth
