--- a/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_e/IlioAB_e_1_Gerro.cfg
+++ b/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_e/IlioAB_e_1_Gerro.cfg
@@ -15,7 +15,7 @@
 		Properties
 		{
 			displayName = Gerro^N
-			description = Gerro is a gas giant in binary orbit with Sandevistan, but the first of them to be discovered due to its being slightly larger and brighter.\n\nWater vapor detected in the atmosphere renders it a light blue color, though how much there is expected to be, let alone possibility of life, remains to be seen.\n-Interplanet Janet
+			description = Gerro is a gas giant in binary orbit with Sandevistan, but the first of them to be discovered due to its being slightly larger and brighter.\n\nWater vapor detected in the atmosphere renders it a light blue color, though how much there is expected to be, let alone possibility of life, remains to be seen.\n-Interplanet Janet & <color=#d358c8>-Wolf Rayet</color>
 			sphereOfInfluence = 120000000
 			//do not leave this as the placeholder radius
 			radius = 1856000
@@ -124,11 +124,11 @@
 		{
 			Material
 			{
-				normals = PJ2/KopernicusFiles/1_InnerSystem/IlioAB_e/PluginData/Gerro_normal.png
+				
 				shininess = 0
 				specColor = 0,0,0,1
-				rimPower = 0.5
-				rimBlend = 0.4
+				rimPower = 0.4
+				rimBlend = 0.2
 				rimColorRamp = PJ2/KopernicusFiles/1_InnerSystem/IlioAB_e/PluginData/Gerro_colorramp.png
 				rimColorRampScale = 1,1
 				rimColorRampOffset = 0,0
@@ -142,6 +142,7 @@
 			OnDemand
 			{
 				texture = PJ2/KopernicusFiles/1_InnerSystem/IlioAB_e/PluginData/Gerro_color.dds
+				normals = PJ2/KopernicusFiles/1_InnerSystem/IlioAB_e/PluginData/Gerro_normal.dds
 				
 			}
 		}
